--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HCR</title>
-  <!-- <link rel="stylesheet" href="static\css\index.css">
-   -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.js">
+  
+<!--   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" /> -->
   <!-- <script src="static\js\index.js" defer></script> -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
+<!--   <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script> -->
 
 
 </head>
