--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HCR</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="index.js">
+  <script type="text/javascript" src="index.js"></script>
   
 <!--   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" /> -->
   <!-- <script src="static\js\index.js" defer></script> -->
